--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,5 +1,14 @@
 {
     "version": 2,
+    "builds": [
+      {
+        "src": "index.js",
+        "use": "@vercel/node",
+        "config": {
+            "includeFiles": "mydatabase.db"
+          }
+      }
+    ],
     "routes": [
       {
         "src": "/(.*)",
